# adventofcode

./: README.md
2019/: Cargo.toml
2019/day01/: main.rs
2019/day01/1/: Cargo.toml  main.rs
2019/day01/2/: Cargo.toml  main.rs
2019/day02/1/: Cargo.toml  main.rs
2019/day02/2/: Cargo.toml  main.rs
2019/day03/: Cargo.toml  main.rs
2019/day03/1/: Cargo.toml  main.rs
2019/day04/: Cargo.toml  main.rs
2019/day05/: main.rs
2019/day07/: Cargo.toml  main.rs
2019/day08/: main.rs
2019/day09/: main.rs
2019/day10/: main.rs
2019/day11/: Cargo.toml  main.rs
2019/day12/: Cargo.toml  main.rs
2019/day13/: Cargo.toml  main.rs
2019/day14/: Cargo.toml  main.rs
2019/day15/: Cargo.toml  main.rs
2019/day16/: Cargo.toml  main.rs
2019/day17/: main.rs
2019/day18/: main.rs
2019/day19/: Cargo.toml  main.rs
2019/day20/: Cargo.toml  main.rs
2019/day21/: main.rs
2019/day22/: Cargo.toml  main.rs
2019/day23/: main.rs
2019/day24/: Cargo.toml  main.rs
2019/day25/: main.rs
2019/rust.old/day01/: Cargo.toml
2019/rust.old/day02/: Cargo.toml  main.rs
2019/rust.old/day05/: Cargo.toml  main.rs
2019/rust.old/day06/: Cargo.toml  main.rs
2019/rust.old/day08/: Cargo.toml  main.rs
2019/rust.old/day09/: Cargo.toml
2019/rust.old/day10/: Cargo.toml
2019/rust.old/day11/: main.rs
2019/rust.old/day12/: main.rs
2019/rust.old/day13/: Cargo.toml
2019/rust.old/day14/: main.rs
2019/rust.old/day16/: main.rs
2019/rust.old/day17/: Cargo.toml  main.rs
2019/rust.old/day18/: Cargo.toml  main.rs
2019/rust.old/day20/: main.rs
2019/rust.old/day21/: Cargo.toml
2019/rust.old/day23/: Cargo.toml  main.rs
2019/rust.old/day25/: Cargo.toml
2019/rust/day02/: Cargo.toml
2019/rust/day03/: Cargo.toml
2019/rust/day04/: Cargo.toml
2019/rust/day05/: Cargo.toml
2019/rust/day07/: Cargo.toml
2019/rust/day09/: Cargo.toml
2019/rust/intcode/: Cargo.toml
2019/utils/src/: intcode.rs
2022/ocaml/: aoc2022.opam  dune-project
2022/ocaml/lib/: common.ml  day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day16.ml  day17.ml  day18.ml  day19.ml  dune  solution.ml  utils.ml
2022/python/: pyproject.toml
2022/python/aoc2022/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py
2022/python/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py
2023/ocaml/: aoc2023.opam  dune-project
2023/ocaml/lib/: day01.ml  day02.ml  day03.ml  day04.ml  dune  (+1 more)
2023/python/: pyproject.toml
2025/ocaml/: aoc2025.opam  dune-project
(+257 files in other folders)
