[workspace]

members = [
    "day01/1",
    "day01/2",
    "day02/1",
    "day02/2",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
    "day13",
    "day14",
    "day15",
    "day16",
    "day17",
    "day19",
    "day21",
    "day22",
    "day23",
]
