[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["sugyan <sugi1982@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
