(lang dune 3.20)

(name aoc2025)

(generate_opam_files true)

(source
 (github sugyan/adventofcode))

(authors "sugyan <sugi1982@gmail.com>")

(maintainers "sugyan <sugi1982@gmail.com>")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name aoc2025)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml base)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
